# abu-feed

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/abu/: feed.h
include/abu/feed/: range_adaptor.h  stream.h
tests/: CMakeLists.txt  fake_input_iterator.h  test_range_adaptor.cpp  test_stream_feed.cpp
